--- a/mysite/static/styles/sass/_menu.sass
+++ b/mysite/static/styles/sass/_menu.sass
@@ -24,6 +24,7 @@ section
         color: #ADAFB2
         li
             font-size: 1.1rem
+            display: block
     &.border-right
         border-right: 1px solid #00427A
     h1, h2, h3, h4, h5
